# Event-Management-API

./: .env.sample  Dockerfile  Makefile  README.md  docker-compose.yml  make.cmd  manage.py  pyproject.toml
accounts/: serializers.py  urls.py  views.py
event_managment_api/: asgi.py  settings.py  urls.py  wsgi.py
events/: admin.py  models.py  urls.py  views.py
events/migrations/: 0001_initial.py
events/tests/: conftest.py  test_views.py
